--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,5 +1,5 @@
 shell:
-  program: /Windows/System32/wsl.exe ~ -d Ubuntu-20.04
+  program: C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe
  
 font:
   normal:
