--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   main:
-    runs-on: [ubuntu-latest, ubuntu-18.04, ubuntu-20.04]
+    runs-on: [ubuntu-18.04, ubuntu-20.04]
     steps:
       - uses: actions/checkout@v1
       - name: install dotfiles
