--- a/pigpiod.service
+++ b/pigpiod.service
@@ -2,7 +2,7 @@
 Description = pigpio daemon
  
 [Service]
-ExecStart = /usr/bin/pigpiod
+ExecStart = /usr/local/bin/pigpiod
 Restart = always
 Type = forking
  
