--- a/win_chocolatey_setting.config
+++ b/win_chocolatey_setting.config
@@ -5,7 +5,8 @@
   <package id="chocolatey-core.extension" version="1.3.5.1" />
   <package id="chocolatey-windowsupdate.extension" version="1.0.4" />
   <package id="chocolateygui" version="0.18.1" />
-  <package id="dbeaver" version="21.1.1" />
+  <package id="dbeaver" version="21.1.5" />
+  <package id="deno" version="1.13.2" />
   <package id="gitkraken" version="7.3.2" />
   <package id="mendeley" version="1.19.8" />
 </packages>
