--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,11 +1,15 @@
 shell:
   program: C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe
- 
+
 font:
   normal:
     family: Cica
-    style: Regular
- 
+  bold:
+    family: Cica
+  italic:
+    family: Cica
+  size: 12
+
 # Colors (Hyper)
 colors:
   # Default colors
@@ -15,7 +19,7 @@ colors:
   cursor:
     text: '0xF81CE5'
     cursor: '0xffffff'
- 
+
   # Normal colors
   normal:
     black:   '0x000000'
@@ -26,7 +30,7 @@ colors:
     magenta: '0xcc00ff'
     cyan:    '0x00ffff'
     white:   '0xd0d0d0'
- 
+
   # Bright colors
   bright:
     black:   '0x808080'
@@ -37,14 +41,14 @@ colors:
     magenta: '0xcc00ff'
     cyan:    '0x00ffff'
     white:   '0xFFFFFF'
- 
+
 background_opacity: 0.95
- 
+
 mouse:
   double_click: { threshold: 300 }
   triple_click: { threshold: 300 }
   hide_when_typing: false
- 
+
 mouse_bindings:
   - { mouse: Left,  mods: Shift, action: Copy }
   - { mouse: Right, mods: Shift, action: Paste }
