--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,6 +1,3 @@
-shell:
-  program: C:\Windows\SysWOW64\WindowsPowerShell\v1.0\powershell.exe
-
 font:
   normal:
     family: Cica
@@ -12,43 +9,45 @@ font:
 
 # Colors (Hyper)
 colors:
+  # COLORSCHEME: solarized_dark.yaml
   # Default colors
   primary:
-    background: '0x000000'
-    foreground: '0xffffff'
+    background: '0x002b36'
+    foreground: '0x839496'
+
+  # Normal colors
   cursor:
-    text: '0xF81CE5'
-    cursor: '0xffffff'
+    text: '0x32302f'
+    cursor: '0xd5c4a1'
 
   # Normal colors
   normal:
-    black:   '0x000000'
-    red:     '0xfe0100'
-    green:   '0x33ff00'
-    yellow:  '0xfeff00'
-    blue:    '0x0066ff'
-    magenta: '0xcc00ff'
-    cyan:    '0x00ffff'
-    white:   '0xd0d0d0'
+    black: '0x073642'
+    red: '0xdc322f'
+    green: '0x859900'
+    yellow: '0xb58900'
+    blue: '0x268bd2'
+    magenta: '0xd33682'
+    cyan: '0x2aa198'
+    white: '0xeee8d5'
 
   # Bright colors
   bright:
-    black:   '0x808080'
-    red:     '0xfe0100'
-    green:   '0x33ff00'
-    yellow:  '0xfeff00'
-    blue:    '0x0066ff'
-    magenta: '0xcc00ff'
-    cyan:    '0x00ffff'
-    white:   '0xFFFFFF'
-
+    black: '0x002b36'
+    red: '0xcb4b16'
+    green: '0x586e75'
+    yellow: '0x657b83'
+    blue: '0x839496'
+    magenta: '0x6c71c4'
+    cyan: '0x93a1a1'
+    white: '0xfdf6e3'
 background_opacity: 0.95
 
 mouse:
-  double_click: { threshold: 300 }
-  triple_click: { threshold: 300 }
+  double_click: {threshold: 300}
+  triple_click: {threshold: 300}
   hide_when_typing: false
 
 mouse_bindings:
-  - { mouse: Left,  mods: Shift, action: Copy }
-  - { mouse: Right, mods: Shift, action: Paste }
+  - {mouse: Left, mods: Shift, action: Copy}
+  - {mouse: Right, mods: Shift, action: Paste}
