--- a/alacritty.yml
+++ b/alacritty.yml
@@ -41,7 +41,9 @@ colors:
     magenta: '0x6c71c4'
     cyan: '0x93a1a1'
     white: '0xfdf6e3'
-background_opacity: 0.95
+
+window:
+  opacity: 0.95
 
 mouse:
   double_click: {threshold: 300}
