--- a/alacritty.yml
+++ b/alacritty.yml
@@ -7,40 +7,44 @@ font:
     family: Cica
   size: 12
 
-# Colors (Hyper)
+# Colors (SeaShells)
+# Source : https://raw.githubusercontent.com/mbadolato/iTerm2-Color-Schemes/master/schemes/SeaShells.itermcolors
 colors:
-  # COLORSCHEME: solarized_dark.yaml
   # Default colors
   primary:
-    background: '0x002b36'
-    foreground: '0x839496'
+    background: '#061923'
+    foreground: '#e5c49e'
 
-  # Normal colors
+  # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
-    text: '0x32302f'
-    cursor: '0xd5c4a1'
+    text: '#061822'
+    cursor: '#feaf3c'
+
+  selection:
+    text: '#ffe9d7'
+    background: '#265b75'
 
   # Normal colors
   normal:
-    black: '0x073642'
-    red: '0xdc322f'
-    green: '0x859900'
-    yellow: '0xb58900'
-    blue: '0x268bd2'
-    magenta: '0xd33682'
-    cyan: '0x2aa198'
-    white: '0xeee8d5'
+    black: '#1d485f'
+    red: '#db662d'
+    green: '#008eab'
+    yellow: '#feaf3c'
+    blue: '#255a62'
+    magenta: '#77dbf4'
+    cyan: '#5fb1c2'
+    white: '#e5c49e'
 
   # Bright colors
   bright:
-    black: '0x002b36'
-    red: '0xcb4b16'
-    green: '0x586e75'
-    yellow: '0x657b83'
-    blue: '0x839496'
-    magenta: '0x6c71c4'
-    cyan: '0x93a1a1'
-    white: '0xfdf6e3'
+    black: '#545d65'
+    red: '#dd998a'
+    green: '#739da8'
+    yellow: '#fedaae'
+    blue: '#0bc7e3'
+    magenta: '#c6e8f1'
+    cyan: '#97b9c0'
+    white: '#ffe9d7'
 
 window:
   opacity: 0.95
